---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 2021.08.XX
  Changes:
    - Log total recipe counts even when we don't crash
---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: 2021.01.21
  Changes:
    - Updated for omnilib 4.1.6
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2021.01.03
  Bugfixes:
    - Fixed that omnipermute broke the localisations of single result recipes
---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: 2020.12.16
  Bugfixes:
    - Fixed a crash with mods that set fixed assembler recipes
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2020.11.26
  Info:
    - Updated for Factorio version 1.1.0
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2020.08.22
  Info:
    - Updated for Factorio version 1.0.0
  Features:
    - Significant performance increase
  Bugfixes:
    - Fixed cases where we would run out of RAM with large include lists on prod modules
---------------------------------------------------------------------------------------------------
Version: 1.18.0
Date: 2020.04.02
  Features:
    - Update to Factorio version 0.18
    - Added Changelog
    - Added Thumbnail
  Bugfixes:
    - Redundant file clean-up
---------------------------------------------------------------------------------------------------
Version: 1.0.0
  Features:
    - Updated to 0.17
---------------------------------------------------------------------------------------------------
Version: 0.1.6
  Features:
    - Added so it maintains all the fluids when changes and progress.