@@ -1,6 +1,11 @@
-
 [item-group-name]
 omnipermutation=Omnipermutation
+
+[mod-setting-name]
+hide_permutations=Hide permutation recipes from crafting
+
+[mod-setting-description]
+hide_permutations=Hides all permutation recipes (except the original one) from the crafting menu. Use the hotkeys to swap inputs / outputs.
 
 [controls]
 decrease-input-fluid-rec=Cycle - Ingredient
