@@ -1,0 +1,9 @@
+data:extend({
+    {
+        type = "bool-setting",
+        name = "hide_permutations",
+        setting_type = "startup",
+        default_value = true,
+        order = "aa"
+    }
+})
