@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.4
 Date: 2021.08.XX
+  Features:
+    - Added a setting that hides all permutation recipes from player crafting (defaults to true)
   Changes:
     - Log total recipe counts even when we don't crash
 ---------------------------------------------------------------------------------------------------
